ccbusTool/src/main/java/ccbus/tool/parser/php/PhpParser.java
/* PhpParser.java */
/* Generated By:JJTree&JavaCC: Do not edit this line. PhpParser.java */
package ccbus.tool.parser.php;

public  class PhpParser/*@bgen(jjtree)*/implements PhpParserTreeConstants, PhpParserConstants {/*@bgen(jjtree)*/
  protected JJTPhpParserState jjtree = new JJTPhpParserState();private static PhpParser parser ;

        public static void main ( String args [ ] ) {

                if(args.length == 0){
                        System.out.println("PHP Parser Version 0.1Alpha:  Reading from standard input . . .");
                        parser = new PhpParser(System.in);
                } else if (args.length == 1) {
                        System.out.println("PHP Parser Version 0.1Alpha:  Reading from file " + args[0] + " . . ." );
                        try {
                                parser = new PhpParser(new java.io.FileInputStream(args[0]));
                        }
                        catch(java.io.FileNotFoundException e){
                                System.out.println("PHP Parser Version 0.1:  File " + args[0] + " not found.");
                                return ;
                        }
                } else {
                        System.out.println("PHP Parser Version 0.1Alpha:  Usage is one of:");
                        System.out.println("         java PHP < inputfile");
                        System.out.println("OR");
                        System.out.println("         java PHP inputfile");
                        return ;
                }
                parser.token_source.SwitchTo(HTML_STATE);
                try {
                        parser.PhpPage();
                        System.out.println("PHP Parser Version 0.1Alpha:  PHP program parsed successfully.");
                }
                catch(ParseException e) {
                        System.out.println("PHP Parser Version 0.1Alpha:  Encountered errors during parse.");
                        System.out.println(e.getMessage());
                }
        }

        void jjtreeOpenNodeScope(Node n)
    {
        n.getId();
    }

    void jjtreeCloseNodeScope(Node n)
    {
        n.getId();
    }

  final public void PhpPage() throws ParseException {
    trace_call("PhpPage");
    try {/*@bgen(jjtree) PhpPage */
  ASTPhpPage jjtn000 = new ASTPhpPage(JJTPHPPAGE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtreeOpenNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
      try {
        label_1:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case PHP_EXPR:
          case HTML_OTHER:
          case HTML:{
            ;
            break;
            }
          default:
            break label_1;
          }
          HtmlBlock();
        }
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case PHP_BEGIN:{
          jj_consume_token(PHP_BEGIN);
          label_2:
          while (true) {
            switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
            case INTEGER_LITERAL:
            case FLOATING_POINT_LITERAL:
            case DOUBLE_STRING_LITERAL_START:
            case SINGLE_STRING_LITERAL_START:
            case HEREDOC_START:
            case REQUIRE_ONCE:
            case REQUIRE:
            case INCLUDE_ONCE:
            case INCLUDE:
            case DEFINE:
            case ECHO:
            case PRINT:
            case SWITCH:
            case CASE:
            case DFLT:
            case BREAK:
            case RETURN:
            case DO:
            case WHILE:
            case FOREACH:
            case FOR:
            case CONTINUE:
            case IF:
            case FUNCTION:
            case CLASS:
            case VAR:
            case PUBLIC:
            case PRIVATE:
            case PROTECTED:
            case ABSTRACT:
            case FINAL:
            case STATIC:
            case INTERFACE:
            case CONST:
            case CLONE:
            case GLOBAL:
            case ARRAY:
            case NEW:
            case PREDEFINED_CONSTANT:
            case PHP_END:
            case DOLLAR:
            case SEMICOLON:
            case TRY:
            case THROW:
            case IDENTIFIER:
            case 105:
            case 109:
            case 112:
            case 114:
            case 142:
            case 147:
            case 148:
            case 149:
            case 150:{
              ;
              break;
              }
            default:
              break label_2;
            }
            Statement();
          }
          break;
          }
        case 0:{
          jj_consume_token(0);
          break;
          }
        default:
          jj_consume_token(-1);
          throw new ParseException();
        }
      } catch (Throwable jjte000) {
if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
      } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
            if (jjtree.nodeCreated()) {
             jjtreeCloseNodeScope(jjtn000);
            }
            jjtn000.jjtSetLastToken(getToken(0));
          }
      }
    } finally {
      trace_return("PhpPage");
    }
  }

  final public void HtmlBlock() throws ParseException {
    trace_call("HtmlBlock");
    try {/*@bgen(jjtree) HtmlBlock */
  ASTHtmlBlock jjtn000 = new ASTHtmlBlock(JJTHTMLBLOCK);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtreeOpenNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
      try {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case HTML:{
          jj_consume_token(HTML);
          break;
          }
        case HTML_OTHER:{
          jj_consume_token(HTML_OTHER);
          break;
          }
        case PHP_EXPR:{
          jj_consume_token(PHP_EXPR);
          Expression();
          jj_consume_token(PHP_END);
          break;
          }
        default:
          jj_consume_token(-1);
          throw new ParseException();
        }
      } catch (Throwable jjte000) {
if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
      } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
            if (jjtree.nodeCreated()) {
             jjtreeCloseNodeScope(jjtn000);
            }
            jjtn000.jjtSetLastToken(getToken(0));
          }
      }
    } finally {
      trace_return("HtmlBlock");
    }
  }

  final public void Statement() throws ParseException {
    trace_call("Statement");
    try {/*@bgen(jjtree) Statement */
  ASTStatement jjtn000 = new ASTStatement(JJTSTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtreeOpenNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
      try {
        if (jj_2_1(2)) {
          LabeledStatement();
        } else if (jj_2_2(2)) {
          ClassDeclaration();
        } else if (jj_2_3(2)) {
          InterfaceDeclaration();
        } else if (jj_2_4(2)) {
          ExpressionStatement();
        } else {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case 109:{
            CompoundStatement();
            break;
            }
          case SWITCH:
          case IF:{
            SelectionStatement();
            break;
            }
          case DO:
          case WHILE:
          case FOREACH:
          case FOR:{
            IterationStatement();
            break;
            }
          case BREAK:
          case RETURN:
          case CONTINUE:{
            JumpStatement();
            break;
            }
          case REQUIRE_ONCE:
          case REQUIRE:
          case INCLUDE_ONCE:
          case INCLUDE:
          case 114:{
            IncludeStatement();
            break;
            }
          case ECHO:
          case PRINT:{
            EchoStatement();
            break;
            }
          case DEFINE:{
            DefineStatement();
            break;
            }
          case FUNCTION:
          case VAR:
          case PUBLIC:
          case PRIVATE:
          case PROTECTED:
          case ABSTRACT:
          case FINAL:
          case STATIC:
          case CONST:
          case GLOBAL:
          case DOLLAR:{
            MemberDeclaration();
            break;
            }
          case THROW:{
            ThrowStatement();
            break;
            }
          case TRY:{
            TryBlock();
            break;
            }
          case PHP_END:
          case SEMICOLON:{
            EndOfStatement();
            break;
            }
          default:
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      } catch (Throwable jjte000) {
if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
      } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
            if (jjtree.nodeCreated()) {
             jjtreeCloseNodeScope(jjtn000);
            }
            jjtn000.jjtSetLastToken(getToken(0));
          }
      }
    } finally {
      trace_return("Statement");
    }
  }

  final public void ThrowStatement() throws ParseException {
    trace_call("ThrowStatement");
    try {/*@bgen(jjtree) ThrowStatement */
  ASTThrowStatement jjtn000 = new ASTThrowStatement(JJTTHROWSTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtreeOpenNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
      try {
        jj_consume_token(THROW);
        ClassInstantiation();
        EndOfStatement();
      } catch (Throwable jjte000) {
if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
      } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
            if (jjtree.nodeCreated()) {
             jjtreeCloseNodeScope(jjtn000);
            }
            jjtn000.jjtSetLastToken(getToken(0));
          }
      }
    } finally {
      trace_return("ThrowStatement");
    }
  }

  final public void TryBlock() throws ParseException {
    trace_call("TryBlock");
    try {/*@bgen(jjtree) TryBlock */
  ASTTryBlock jjtn000 = new ASTTryBlock(JJTTRYBLOCK);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtreeOpenNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
      try {
        jj_consume_token(TRY);
        CompoundStatement();
        label_3:
        while (true) {
          jj_consume_token(CATCH);
          jj_consume_token(105);
          jj_consume_token(IDENTIFIER);
          Variable();
          jj_consume_token(106);
          CompoundStatement();
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case CATCH:{
            ;
            break;
            }
          default:
            break label_3;
          }
        }
      } catch (Throwable jjte000) {
if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
      } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
            if (jjtree.nodeCreated()) {
             jjtreeCloseNodeScope(jjtn000);
            }
            jjtn000.jjtSetLastToken(getToken(0));
          }
      }
    } finally {
      trace_return("TryBlock");
    }
  }
